# parrot

./: Cargo.toml
.github/workflows/: build.yml
src/: client.rs  errors.rs  main.rs  utils.rs
src/commands/: clear.rs  manage_sources.rs  now_playing.rs  pause.rs  play.rs  queue.rs  remove.rs  repeat.rs  resume.rs  seek.rs  shuffle.rs  skip.rs  stop.rs  summon.rs  voteskip.rs
src/handlers/: idle.rs  serenity.rs  track_end.rs
src/sources/: librespot.rs  mod.rs  spotify.rs  youtube.rs
src/utils/: queue.rs
