[package]
name = "parrot"
version = "1.6.0"
authors = ["aquelemiguel"]
edition = "2018"
description = "A Discord music bot built in Rust"
repository = "https://github.com/aquelemiguel/parrot"
license = "MIT"
keywords = ["discord", "music-bot", "rust"]

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.5.5"
serde_json = "1.0.79"
env_logger = "0.9.0"
log = "0.4.17"
url = "2.3.1"
serde = "1.0.152"
reqwest = { version = "0.11.27", features = ["rustls-tls"], default-features = false }
parking_lot = "0.12.3"
async-trait = "0.1.83"
symphonia = "0.5.4"
audiopus = "0.2.0"
audiopus_sys = { version = "0.2.2", features = ["static"] }
dashmap = "6.1.0"
librespot = "0.4.2"
snafu = { version = "0.8.5", features = ["backtrace"] }
zerocopy = "0.8.5"

[dependencies.rspotify]
version = "0.12.0"
features = ["reqwest-rustls-tls", "__async", "async-stream", "async-trait", "client-reqwest", "futures", "reqwest-rustls-tls"]
default-features = false

[dependencies.songbird]
version = "0.4.3"
features = ["rustls", "driver"]

[dependencies.serenity]
version = "0.12.0"
default-features = false
features = ["cache", "collector", "client", "gateway", "model", "rustls_backend", "unstable_discord_api", "voice", "builder"]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]
